# Agentic_AI

Chat_Langchain_Lite/: ingestion.py  logger.py  main.py  pyproject.toml
Chat_Langchain_Lite/backend/: core.py
LangGraph_project/: main.py  nodes.py  pyproject.toml  react.py
LangGraph_project/Reflection_agent/: chains.py  main.py  pyproject.toml
LangGraph_project/Reflexion_agent/: chains.py  main.py  pyproject.toml  schema.py  tool_executor.py
Mini-Naive-Rag-Project/: ingestion.py  main.py  pyproject.toml
react-agent/: main.py  pyproject.toml
react-agent/E-com_agent/: 1_agent_loop_tool_calling.py  2_agent_loop_raw_function.py  3_raw_react_prompt.py  pyproject.toml
